--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <java.version>1.7</java.version>
         <junit.version>4.12</junit.version>
         <cucumber.version>2.2.0</cucumber.version>
-        <!--<maven.compiler.version>3.3</maven.compiler.version>-->
+        <maven.compiler.version>3.3</maven.compiler.version>
     </properties>
 
     <dependencies>
@@ -38,5 +38,21 @@
         </dependency>
     </dependencies>
 
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven.compiler.version}</version>
+                <configuration>
+                    <encoding>UTF-8</encoding>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <compilerArgument>-Werror</compilerArgument>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
